2013-07-03  Stipe Tolj  <stolj at kannel.org>
    * gw/wap_push_ppg.c: fix assertion check conditions.
    
2013-06-21  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_headers.c: adding some debug() lines to trace WSP header packing
      better for WAP Push messages, i.e. SI or MMS indications.
    * wap/wsp_unit.c: added wsp_pdu_dump() to dump the WSP PDU before packing
      for push transport, source code re-formating. NLC.
      
2013-06-19  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_strings.def: add various new WSP byte codes.
    * wap/wsp.h: add WSP_TBD to wsp_encoding enumeration.
    
2013-05-07 Alexander Malysh <amalysh at kannel.org>
	* gw/smsbox.c: fixed issue with DLRs because we don't have URLTranslation for
	  it. This fixes #686.

2013-05-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c: changed conn_read_packet to accept startmark -1 and ignore
      it in this case.

2013-05-06 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mysql.c: fixed memory leak.

2013-04-13  Stipe Tolj  <stolj at kannel.org>
    * doc/doxgen/kannel.conf: automated update via 'doxygen -u' to the
      configuration file.
      
2013-04-09 Alexander Malysh <amalysh at kannel.org>
    * gwlib/socket.[ch], test/fakewap.c: patch with
      - parse WSP message and save only the received payload to the output file
      - support for connectionless get/post
      - robustness fixes for Post (resend group segments if no ack), packet loss simulation
      Thanks to Piotr Galecki <piotr_galecki at affirmednetworks.com> for this patch.

2013-03-28  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: revert back, not handling the 'pg_config --libs' output
      as these seem to be the static libs used while linking libpg.a itself,
      and they add unresolved dependancies on various systems. Causes more
      trouble then it help, going back to the old way.
      
2013-03-27  Stipe Tolj  <stolj at kannel.org>